Fix makdown syntax in API doc

--- a/Mainpage.dox
+++ b/Mainpage.dox
@@ -275,77 +275,74 @@
 
 \subsection depscomplink Dependencies To Compile And Link Source Code
 
-The full list of mandatory (X) and optional (opt) external dependencies required to compile and link digiKam source code is listed below.
+The full list of mandatory (X) and (optional) external dependencies required to compile and link digiKam source code is listed below.
 
-|----------------------|----------|------------|------------|-------------------------------------------------------|--------------------------------------------------------|---------------------------------------------------------------------------------------|
-| Dependency           |  Status  |         Version         | Project URL                                           | Remarks                                                | TODO                                                                                  |
-|----------------------|----------|------------|------------|-------------------------------------------------------|--------------------------------------------------------|---------------------------------------------------------------------------------------|
-|                      |          | Qt 5       | Qt 6       |                                                       |                                                        |                                                                                       |
-|----------------------|----------|------------|------------|-------------------------------------------------------|--------------------------------------------------------|---------------------------------------------------------------------------------------|
-| CMake                |    X     | >= 3.16.0  | >= 3.22.0  | https://www.cmake.org                                 |                                                        |                                                                                       |
-| ECM                  |    X     | >= 5.55.0  | >= 5.91.0  | https://invent.kde.org/frameworks/extra-cmake-modules |                                                        |                                                                                       |
-| Qt::Core             |    X     | >= 5.14    | >= 6.2.3   | https://code.qt.io/cgit/qt/qtbase.git/                |                                                        |                                                                                       |
-| Qt::Gui              |    X     | >= 5.14    | >= 6.2.3   | https://code.qt.io/cgit/qt/qtbase.git/                |                                                        |                                                                                       |
-| Qt::Widgets          |    X     | >= 5.14    | >= 6.2.3   | https://code.qt.io/cgit/qt/qtbase.git/                |                                                        |                                                                                       |
-| Qt::Network          |    X     | >= 5.14    | >= 6.2.3   | https://code.qt.io/cgit/qt/qtbase.git/                |                                                        |                                                                                       |
-| Qt::Sql              |    X     | >= 5.14    | >= 6.2.3   | https://code.qt.io/cgit/qt/qtbase.git/                | Including Qt::Sqlite and Qt::Mysql plugins             |                                                                                       |
-| Qt::Xml              |    X     | >= 5.14    | >= 6.2.3   | https://code.qt.io/cgit/qt/qtbase.git/                |                                                        |                                                                                       |
-| Qt::Concurrent       |    X     | >= 5.14    | >= 6.2.3   | https://code.qt.io/cgit/qt/qtbase.git/                |                                                        |                                                                                       |
-| Qt::PrintSupport     |    X     | >= 5.14    | >= 6.2.3   | https://code.qt.io/cgit/qt/qtbase.git/                |                                                        |                                                                                       |
-| Qt::Svg              |    X     | >= 5.14    | >= 6.2.3   | https://code.qt.io/cgit/qt/qtsvg.git/                 |                                                        |                                                                                       |
-| Qt::WebEngine        |    X     | >= 5.14    | >= 6.2.3   | https://code.qt.io/cgit/qt/qtwebengine.git/           | To render web contents (ENABLE_QWEBENGINE=on)          | To replace Qt5::WebKitWidgets everywhere, excepted for MXE                            |
-| Qt::Core5Compat      |    X     | ---        | >= 6.2.3   | https://code.qt.io/cgit/qt/qt5compat.git/             | to compile with deprecated classes from Qt5            | For Qt6 only.                                                                         |
-| Qt::WebKitWidgets    | optional | >= 5.212   | ---        | https://code.qt.io/cgit/qt/qtwebkit.git/              | To render web contents                                 | Used with MXE only as WebEngine do not compile with MinGW. Not yet ported to Qt6.     |
-| Qt::XmlPatterns      | optional | >= 5.14    | ---        | https://code.qt.io/cgit/qt/qtxmlpatterns.git/         | To parse and validate Xml                              | Used by Rajce plugin. Module removed with Qt6.                                        |
-| Qt::X11Extras        | optional | >= 5.14    | ---        | https://code.qt.io/cgit/qt/qtx11extras.git/           | For color management support under Linux               | Module removed with Qt6.                                                              |
-| Qt::DBus             | optional | >= 5.14    | >= 6.2.3   | https://code.qt.io/cgit/qt/qtbase.git/                | Optional: only for Linux Desktop                       |                                                                                       |
-| Qt::OpenGL           | optional | >= 5.14    | >= 6.2.3   | https://code.qt.io/cgit/qt/qtbase.git/                | For Presentation tool                                  |                                                                                       |
-| Qt::OpenGLWidgets    | optional | ---        | >= 6.2.3   | https://code.qt.io/cgit/qt/qtbase.git/                | For Presentation tool                                  | With Qt6 OPenGL is separated in 2 modules: core and widgets.                          |
-| Qt::Test             | optional | >= 5.14    | >= 6.2.3   | https://code.qt.io/cgit/qt/qtbase.git/                | To compile test codes (BUILD_TESTING=on)               |                                                                                       |
-| Qt::Qml              | optional | >= 5.14    | >= 6.2.3   | https://code.qt.io/cgit/qt/qtdeclarative.git/         | To compile test codes (BUILD_TESTING=on) O2 unit tests |                                                                                       |
-| Qt::WebView          | optional | >= 5.14    | >= 6.2.3   | https://code.qt.io/cgit/qt/qtwebview.git/             | To compile test codes (BUILD_TESTING=on) O2 unit tests |                                                                                       |
-| KF::Config           |    X     | >= 5.55.0  | >= 5.91.0  | https://invent.kde.org/frameworks/kconfig             |                                                        |                                                                                       |
-| KF::XmlGui           |    X     | >= 5.55.0  | >= 5.91.0  | https://invent.kde.org/frameworks/kxmlgui             |                                                        |                                                                                       |
-| KF::I18n             |    X     | >= 5.55.0  | >= 5.91.0  | https://invent.kde.org/frameworks/ki18n               |                                                        |                                                                                       |
-| KF::WindowSystem     |    X     | >= 5.55.0  | >= 5.91.0  | https://invent.kde.org/frameworks/kwindowsystem       |                                                        |                                                                                       |
-| KF::Service          |    X     | >= 5.55.0  | >= 5.91.0  | https://invent.kde.org/frameworks/kservice            | TODO: make optional for Linux desktop (DFileOperations)|                                                                                       |
-| KF::Solid            |    X     | >= 5.55.0  | >= 5.91.0  | https://invent.kde.org/frameworks/solid               |                                                        |                                                                                       |
-| KF::CoreAddons       |    X     | >= 5.55.0  | >= 5.91.0  | https://invent.kde.org/frameworks/kcoreaddons         | Needs for KAboutData                                   |                                                                                       |
-| KF::NotifyConfig     | optional | >= 5.55.0  | >= 5.91.0  | https://invent.kde.org/frameworks/knotifyconfig       | For Linux desktop application notify configuration     |                                                                                       |
-| KF::Notifications    | optional | >= 5.55.0  | >= 5.91.0  | https://invent.kde.org/frameworks/knotifications      | For Linux desktop notifications integrations           |                                                                                       |
-| KF::ThreadWeaver     | optional | >= 5.55.0  | >= 5.91.0  | https://invent.kde.org/frameworks/threadweaver        | For panorama tool                                      |                                                                                       |
-| KF::IconThemes       | optional | >= 5.55.0  | >= 5.91.0  | https://invent.kde.org/frameworks/kiconthemes         | Optional: only for Linux Desktop (KIconDialog)         |                                                                                       |
-| KF::FileMetaData     | optional | >= 5.55.0  | >= 5.91.0  | https://invent.kde.org/frameworks/kfilemetadata       | Plasma desktop files indexer support                   | (ENABLE_KFILEMETADATASUPPORT=ON) Disabled by default.                                 |
-| KF::CalendarCore     | optional | >= 5.55.0  | >= 5.91.0  | https://invent.kde.org/frameworks/kcalendarcore       | For calendar tool to setup ical special events         |                                                                                       |
-| KF::KIO              | optional | >= 5.55.0  | >= 5.91.0  | https://invent.kde.org/frameworks/kio                 | Optional: only for Linux Desktop                       |                                                                                       |
-| KF::AkonadiContact   | optional | >= 5.16.0  | >= 5.91.0  | https://invent.kde.org/pim/akonadi-contacts           | Plasma desktop addess-book support                     | (ENABLE_AKONADICONTACTSUPPORT=ON) Disabled by default.                                |
-| libopencv            |    X     | >= 3.3     |            | https://github.com/opencv/opencv                      | OpenCV 4 recommended                                   | DNN module required for face management                                               |
-| libtiff              |    X     | >= 4.0     |            | https://gitlab.com/libtiff/libtiff                    | For DImg image loader                                  |                                                                                       |
-| libpng               |    X     | >= 1.6     |            | https://libpng.sourceforge.io/                        | For DImg image loader                                  |                                                                                       |
-| libjpeg              |    X     | >= 6b      |            | https://github.com/libjpeg-turbo/libjpeg-turbo        | jpeglib >= 8.0 hightly recommended for RawEngine       |                                                                                       |
-| libboost             |    X     | >= 1.55.0  |            | https://github.com/boostorg/boost                     | For Versioning support                                 |                                                                                       |
-| liblcms              |    X     | >= 2.x     |            | https://github.com/mm2/Little-CMS                     | For Color Management support                           |                                                                                       |
-| libexpat             |    X     | >= 2.1.0   |            | https://libexpat.github.io/                           | For DNG converter                                      |                                                                                       |
-| libexiv2             |    X     | >= 0.27.0  |            | https://github.com/Exiv2/exiv2                        | Metadata low level management.                         |                                                                                       |
-| libxml2              | optional | >= 2.7.0   |            | https://gitlab.gnome.org/GNOME/libxml2/               | For HtmlGallery tool                                   |                                                                                       |
-| libxslt              | optional | >= 1.1.0   |            | https://gitlab.gnome.org/GNOME/libxslt                | For HtmlGallery tool                                   |                                                                                       |
-| libqtav              | optional | >= 1.12.0  | git master | https://github.com/wang-bin/QtAV                      | To play video and audio (ENABLE_MEDIAPLAYER=on)        |                                                                                       |
-| libffmpeg            | optional | >= 3.3.x   |            | https://git.ffmpeg.org/ffmpeg.git                     | To play video and audio (ENABLE_MEDIAPLAYER=on)        | libavformat, libavutil, libavcodec used to extract video metadata                     |
-| Flex                 | optional | >= 2.5.0   |            | https://github.com/westes/flex                        | For Panorama tool                                      |                                                                                       |
-| Bison                | optional | >= 2.5.0   |            | https://www.gnu.org/software/bison/bison.html         | For Panorama tool                                      |                                                                                       |
-| libmesa              | optional | >= 11.0    |            | https://www.mesa3d.org/                               | For Presentation tools (Linux only)                    |                                                                                       |
-| libksane             | optional | >= 5.55.0  | ---        | https://invent.kde.org/graphics/libksane              | Digital scanner support                                | Not yet ported to Qt6                                                                 |
-| libmarble            | optional | >= 0.28.0  | ---        | https://invent.kde.org/education/marble               | For geolocation support                                | Not yet ported to Qt6                                                                 |
-| libjpasper           | optional | >= 1.900.1 |            | https://github.com/jasper-software/jasper             | For JPEG-2000 support                                  |                                                                                       |
-| libeigen3            | optional | >= 3.2     |            | https://github.com/eigenteam/eigen-git-mirror         | For Refocus tool                                       | See if Clapack from OpenCV can be used instead                                        |
-| liblensfun           | optional | >= 0.2.8   |            | https://github.com/lensfun/lensfun                    | For LensCorrection tool                                |                                                                                       |
-| liblqr-1             | optional | >= 0.4.2   |            | https://github.com/carlobaldassi/liblqr               | For Liquid rescale tool                                |                                                                                       |
-| libgphoto2           | optional | >= 2.5     |            | https://github.com/gphoto/libgphoto2                  | Digital camera drivers support. Need libusb-1          |                                                                                       |
-| libgomp              | optional | >= 5.0     |            | https://gcc.gnu.org/onlinedocs/libgomp                | OpenMP support for RawEngine                           |                                                                                       |
-| libmagick++          | optional | >= 6.7.0   |            | https://www.imagemagick.org                           | ImageMagick codecs support for DImg image loader       | Version >= 7.0 recommended                                                            |
-| DrMingw              | optional | >= 0.8.2   |            | https://github.com/jrfonseca/drmingw                  | Mingw crash handler (run-time deps only for windows)   |                                                                                       |
-| libx265              | optional | >= 2.2     |            | https://x265.org/                                     | For HEIC encoding support                              |                                                                                       |
-|----------------------|----------|------------|------------|-------------------------------------------------------|--------------------------------------------------------|---------------------------------------------------------------------------------------|
+|----------------------|----------|---------------|---------------|-------------------------------------------------------|--------------------------------------------------------|---------------------------------------------------------------------------------------|
+| Dependency           |  Status  | Version (Qt5) | Version (Qt6) | Project URL                                           | Remarks                                                | Notes                                                                                 |
+|----------------------|----------|---------------|---------------|-------------------------------------------------------|--------------------------------------------------------|---------------------------------------------------------------------------------------|
+| CMake                |    X     | >= 3.16.0     | >= 3.22.0     | https://www.cmake.org                                 |                                                        |                                                                                       |
+| ECM                  |    X     | >= 5.55.0     | >= 5.91.0     | https://invent.kde.org/frameworks/extra-cmake-modules | Qt6 support implemented in KDE framework >= 5.91.0     |                                                                                       |
+| Qt::Core             |    X     | >= 5.14       | >= 6.2.3      | https://code.qt.io/cgit/qt/qtbase.git/                |                                                        |                                                                                       |
+| Qt::Gui              |    X     | >= 5.14       | >= 6.2.3      | https://code.qt.io/cgit/qt/qtbase.git/                |                                                        |                                                                                       |
+| Qt::Widgets          |    X     | >= 5.14       | >= 6.2.3      | https://code.qt.io/cgit/qt/qtbase.git/                |                                                        |                                                                                       |
+| Qt::Network          |    X     | >= 5.14       | >= 6.2.3      | https://code.qt.io/cgit/qt/qtbase.git/                |                                                        |                                                                                       |
+| Qt::Sql              |    X     | >= 5.14       | >= 6.2.3      | https://code.qt.io/cgit/qt/qtbase.git/                | Including Qt::Sqlite and Qt::Mysql plugins             |                                                                                       |
+| Qt::Xml              |    X     | >= 5.14       | >= 6.2.3      | https://code.qt.io/cgit/qt/qtbase.git/                |                                                        |                                                                                       |
+| Qt::Concurrent       |    X     | >= 5.14       | >= 6.2.3      | https://code.qt.io/cgit/qt/qtbase.git/                |                                                        |                                                                                       |
+| Qt::PrintSupport     |    X     | >= 5.14       | >= 6.2.3      | https://code.qt.io/cgit/qt/qtbase.git/                |                                                        |                                                                                       |
+| Qt::Svg              |    X     | >= 5.14       | >= 6.2.3      | https://code.qt.io/cgit/qt/qtsvg.git/                 |                                                        |                                                                                       |
+| Qt::WebEngine        |    X     | >= 5.14       | >= 6.2.3      | https://code.qt.io/cgit/qt/qtwebengine.git/           | To render web contents (ENABLE_QWEBENGINE=on)          | To replace Qt5::WebKitWidgets everywhere, excepted for MXE                            |
+| Qt::Core5Compat      |    X     | ---           | >= 6.2.3      | https://code.qt.io/cgit/qt/qt5compat.git/             | to compile with deprecated classes from Qt5            | For Qt6 only.                                                                         |
+| Qt::WebKitWidgets    | optional | >= 5.212      | ---           | https://code.qt.io/cgit/qt/qtwebkit.git/              | To render web contents                                 | Used with MXE only as WebEngine do not compile with MinGW. Not yet ported to Qt6.     |
+| Qt::XmlPatterns      | optional | >= 5.14       | ---           | https://code.qt.io/cgit/qt/qtxmlpatterns.git/         | To parse and validate Xml                              | Used by Rajce plugin. Module removed with Qt6.                                        |
+| Qt::X11Extras        | optional | >= 5.14       | ---           | https://code.qt.io/cgit/qt/qtx11extras.git/           | For color management support under Linux               | Module removed with Qt6.                                                              |
+| Qt::DBus             | optional | >= 5.14       | >= 6.2.3      | https://code.qt.io/cgit/qt/qtbase.git/                | Optional: only for Linux Desktop                       |                                                                                       |
+| Qt::OpenGL           | optional | >= 5.14       | >= 6.2.3      | https://code.qt.io/cgit/qt/qtbase.git/                | For Presentation tool                                  |                                                                                       |
+| Qt::OpenGLWidgets    | optional | ---           | >= 6.2.3      | https://code.qt.io/cgit/qt/qtbase.git/                | For Presentation tool                                  | With Qt6 OPenGL is separated in 2 modules: core and widgets.                          |
+| Qt::Test             | optional | >= 5.14       | >= 6.2.3      | https://code.qt.io/cgit/qt/qtbase.git/                | To compile test codes (BUILD_TESTING=on)               |                                                                                       |
+| Qt::Qml              | optional | >= 5.14       | >= 6.2.3      | https://code.qt.io/cgit/qt/qtdeclarative.git/         | To compile test codes (BUILD_TESTING=on) O2 unit tests |                                                                                       |
+| Qt::WebView          | optional | >= 5.14       | >= 6.2.3      | https://code.qt.io/cgit/qt/qtwebview.git/             | To compile test codes (BUILD_TESTING=on) O2 unit tests |                                                                                       |
+| KF::Config           |    X     | >= 5.55.0     | >= 5.91.0     | https://invent.kde.org/frameworks/kconfig             |                                                        |                                                                                       |
+| KF::XmlGui           |    X     | >= 5.55.0     | >= 5.91.0     | https://invent.kde.org/frameworks/kxmlgui             |                                                        |                                                                                       |
+| KF::I18n             |    X     | >= 5.55.0     | >= 5.91.0     | https://invent.kde.org/frameworks/ki18n               |                                                        |                                                                                       |
+| KF::WindowSystem     |    X     | >= 5.55.0     | >= 5.91.0     | https://invent.kde.org/frameworks/kwindowsystem       |                                                        |                                                                                       |
+| KF::Service          |    X     | >= 5.55.0     | >= 5.91.0     | https://invent.kde.org/frameworks/kservice            | TODO: make optional for Linux desktop (DFileOperations)|                                                                                       |
+| KF::Solid            |    X     | >= 5.55.0     | >= 5.91.0     | https://invent.kde.org/frameworks/solid               |                                                        |                                                                                       |
+| KF::CoreAddons       |    X     | >= 5.55.0     | >= 5.91.0     | https://invent.kde.org/frameworks/kcoreaddons         | Needs for KAboutData                                   |                                                                                       |
+| KF::NotifyConfig     | optional | >= 5.55.0     | >= 5.91.0     | https://invent.kde.org/frameworks/knotifyconfig       | For Linux desktop application notify configuration     |                                                                                       |
+| KF::Notifications    | optional | >= 5.55.0     | >= 5.91.0     | https://invent.kde.org/frameworks/knotifications      | For Linux desktop notifications integrations           |                                                                                       |
+| KF::ThreadWeaver     | optional | >= 5.55.0     | >= 5.91.0     | https://invent.kde.org/frameworks/threadweaver        | For panorama tool                                      |                                                                                       |
+| KF::IconThemes       | optional | >= 5.55.0     | >= 5.91.0     | https://invent.kde.org/frameworks/kiconthemes         | Optional: only for Linux Desktop (KIconDialog)         |                                                                                       |
+| KF::FileMetaData     | optional | >= 5.55.0     | >= 5.91.0     | https://invent.kde.org/frameworks/kfilemetadata       | Plasma desktop files indexer support                   | (ENABLE_KFILEMETADATASUPPORT=ON) Disabled by default.                                 |
+| KF::CalendarCore     | optional | >= 5.55.0     | >= 5.91.0     | https://invent.kde.org/frameworks/kcalendarcore       | For calendar tool to setup ical special events         |                                                                                       |
+| KF::KIO              | optional | >= 5.55.0     | >= 5.91.0     | https://invent.kde.org/frameworks/kio                 | Optional: only for Linux Desktop                       |                                                                                       |
+| KF::AkonadiContact   | optional | >= 5.16.0     | >= 5.91.0     | https://invent.kde.org/pim/akonadi-contacts           | Plasma desktop addess-book support                     | (ENABLE_AKONADICONTACTSUPPORT=ON) Disabled by default.                                |
+| libopencv            |    X     | >= 3.3        |               | https://github.com/opencv/opencv                      | OpenCV 4 recommended                                   | DNN module required for face management                                               |
+| libtiff              |    X     | >= 4.0        |               | https://gitlab.com/libtiff/libtiff                    | For DImg image loader                                  |                                                                                       |
+| libpng               |    X     | >= 1.6        |               | https://libpng.sourceforge.io/                        | For DImg image loader                                  |                                                                                       |
+| libjpeg              |    X     | >= 6b         |               | https://github.com/libjpeg-turbo/libjpeg-turbo        | jpeglib >= 8.0 hightly recommended for RawEngine       |                                                                                       |
+| libboost             |    X     | >= 1.55.0     |               | https://github.com/boostorg/boost                     | For Versioning support                                 |                                                                                       |
+| liblcms              |    X     | >= 2.x        |               | https://github.com/mm2/Little-CMS                     | For Color Management support                           |                                                                                       |
+| libexpat             |    X     | >= 2.1.0      |               | https://libexpat.github.io/                           | For DNG converter                                      |                                                                                       |
+| libexiv2             |    X     | >= 0.27.0     |               | https://github.com/Exiv2/exiv2                        | Metadata low level management.                         |                                                                                       |
+| libxml2              | optional | >= 2.7.0      |               | https://gitlab.gnome.org/GNOME/libxml2/               | For HtmlGallery tool                                   |                                                                                       |
+| libxslt              | optional | >= 1.1.0      |               | https://gitlab.gnome.org/GNOME/libxslt                | For HtmlGallery tool                                   |                                                                                       |
+| libqtav              | optional | >= 1.12.0     | > 1.13.0      | https://github.com/wang-bin/QtAV                      | To play video and audio (ENABLE_MEDIAPLAYER=on)        | Qt6 support add in git master code later january 2022                                 |
+| libffmpeg            | optional | >= 3.3.x      |               | https://git.ffmpeg.org/ffmpeg.git                     | To play video and audio (ENABLE_MEDIAPLAYER=on)        | libavformat, libavutil, libavcodec used to extract video metadata                     |
+| Flex                 | optional | >= 2.5.0      |               | https://github.com/westes/flex                        | For Panorama tool                                      |                                                                                       |
+| Bison                | optional | >= 2.5.0      |               | https://www.gnu.org/software/bison/bison.html         | For Panorama tool                                      |                                                                                       |
+| libmesa              | optional | >= 11.0       |               | https://www.mesa3d.org/                               | For Presentation tools (Linux only)                    |                                                                                       |
+| libksane             | optional | >= 5.55.0     | ---           | https://invent.kde.org/graphics/libksane              | Digital scanner support                                | Not yet ported to Qt6                                                                 |
+| libmarble            | optional | >= 0.28.0     | ---           | https://invent.kde.org/education/marble               | For geolocation support                                | Not yet ported to Qt6                                                                 |
+| libjpasper           | optional | >= 1.900.1    |               | https://github.com/jasper-software/jasper             | For JPEG-2000 support                                  |                                                                                       |
+| libeigen3            | optional | >= 3.2        |               | https://github.com/eigenteam/eigen-git-mirror         | For Refocus tool                                       | See if Clapack from OpenCV can be used instead                                        |
+| liblensfun           | optional | >= 0.2.8      |               | https://github.com/lensfun/lensfun                    | For LensCorrection tool                                |                                                                                       |
+| liblqr-1             | optional | >= 0.4.2      |               | https://github.com/carlobaldassi/liblqr               | For Liquid rescale tool                                |                                                                                       |
+| libgphoto2           | optional | >= 2.5        |               | https://github.com/gphoto/libgphoto2                  | Digital camera drivers support. Need libusb-1          |                                                                                       |
+| libgomp              | optional | >= 5.0        |               | https://gcc.gnu.org/onlinedocs/libgomp                | OpenMP support for RawEngine                           |                                                                                       |
+| libmagick++          | optional | >= 6.7.0      |               | https://www.imagemagick.org                           | ImageMagick codecs support for DImg image loader       | Version >= 7.0 recommended                                                            |
+| DrMingw              | optional | >= 0.8.2      |               | https://github.com/jrfonseca/drmingw                  | Mingw crash handler (run-time deps only for windows)   |                                                                                       |
+| libx265              | optional | >= 2.2        |               | https://x265.org/                                     | For HEIC encoding support                              |                                                                                       |
 
 \section getsourcecode Get Source Code
 
